# cfpb_local_warehouse

./: README.md  docker-compose.yml  manage_lakehouse.sh  pyproject.toml  run_pipeline.py  start_airflow.sh
.github/workflows/: lint.yml
airflow/: airflow.cfg
airflow/dags/: cfpb_complaint_dag.py  consumer_complaint_dag.py  test_sys_path.py
dbt_cfpb/: .user.yml  dbt_project.yml  profiles.yml
dbt_cfpb/models/marts/: _models.yml  agg_complaints_by_month.sql  dim_companies.sql  dim_issues.sql  dim_products.sql  dim_response_types.sql  dim_states.sql  fct_complaints.sql
dbt_cfpb/models/staging/: _models.yml  _sources.yml  stg_cfpb__complaints.sql
docs/: README_AIRFLOW.md  README_DATA_SOURCE.md  design.md  run_dag_guide.md  source.md
src/api/: cfpb_client.py
src/cfg/: __init__.py  config.py
src/cfpb/: cfpb_client.py  config.py  ingestion_pipeline.py  state.py
src/etl/: etl.py
src/utils/: state.py  utils.py
streamlit/: app.py
tests/: test_cfpb_api_client.py  test_data_in_duckdb.py
