[project]
name = "cfpb_local_warehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow>=3.2.1",
    "apache-airflow-task-sdk>=1.2.1",
    "dbt-core>=1.11.8",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.2",
    "ipykernel>=7.2.0",
    "minio>=7.2.20",
    "pandas>=2.3.3",
    "plotly>=6.9.0",
    "pyarrow>=24.0.0",
    "requests>=2.33.1",
    "streamlit>=1.57.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]
